deploy/kubernetes/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dozen-backend-service
spec:
  selector:
    app: dozen-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
